[package]
name = "ansi-colors"
version = "0.3.0"
authors = ["guy <guy123levinger@gmail.com>"]
edition = "2018"
description = "an ansi-coloring sceme crate that allows you to format and color your output"
repository = "http://github.com/l-tools/ansi-colors"
readme = "README.md"
categories = ["graphics","gui","command-line-interface"]
keywords = ["cli", "api","gui"]
license = "MIT"
documentation = "https://docs.rs/ansi-colors/0.3.0/ansi_colors"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3


[lib]
name = "ansi_colors"

path = "src/lib.rs"

test = true

doctest = true

bench = true

doc = true
